maze.lessons.maze.island.IslandMaze.scala.error
Escaper:22: error: not found: value set
    	set.direction(direction.NOTH)
        ^Escaper:22: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime6.Escaper
    	set.direction(direction.NOTH)
                      ^